# IntroductionToProgrammingWeeklyExercises

./: CMakeLists.txt  ComputerShutDowner.cpp  FinalExercise.cpp  README.md  main.cpp  pointerExercise.cpp  ptr1.cpp  trysmthng.cpp
Exercises/: pointerExercise.cpp
Week06/: Exercise1.cpp  Exercise2.cpp
Week09/: Exercise1.cpp
Week10/: Exercise1.cpp  Exercise2.cpp  Exercise3.cpp
