cmake_minimum_required(VERSION 3.29)
project(IntroductionToProgrammingWeeklyExercises)

set(CMAKE_CXX_STANDARD 20)

add_executable(IntroductionToProgrammingWeeklyExercises

        Exercises/FinalExercise.cpp
        Exercises/pointerExercise.cpp
        Exercises/ptr1.cpp
        ComputerShutDowner.cpp
)


